@@ -28,8 +28,10 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.3.2
 
-Fixes:
+New Commands:
+- Widgets: Added "add_dummy"
 
+Fixes:
 - Colors: Fixed crash when adding a color more than 4 items long
 
 
